<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 Allogy Interactive.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
  ~ use this file except in compliance with the License. You may obtain a copy of
  ~ the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations under
  ~ the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@drawable/default_background">

	<!-- Action Bar -->
	<LinearLayout style="@style/UI.TitleBar">
		<TextView style="@style/UI.TitleBarText" 
			android:text="@string/home_name" />
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:orientation="vertical"
		android:padding="10dp">

		<EditText android:id="@+id/register_phone_number"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:hint="@string/register_phone_hint"
			android:inputType="phone"
			android:imeOptions="actionNext"/>
			
		<EditText android:id="@+id/register_gateway_number"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:hint="@string/register_gateway_hint"
			android:inputType="phone"
			android:imeOptions="actionNext"/>

		<EditText android:id="@+id/register_sms_code"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:hint="@string/register_code_hint"
			android:inputType="text"
			android:imeOptions="actionDone"/>

	</LinearLayout>
	
	<TextView android:id="@+id/accept_terms_text"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:textColor="@color/black"
		android:textSize="17sp"
		android:padding="20dp" />

	<Button android:id="@+id/register_verify_button"
		android:layout_height="wrap_content" android:layout_width="120dp"
		android:text="@string/register_button"
		android:layout_gravity="center_horizontal"
		android:onClick="onPreVerify"
		android:padding="10dp"/>
	
</LinearLayout>
	
