<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 Allogy Interactive.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
  ~ use this file except in compliance with the License. You may obtain a copy of
  ~ the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations under
  ~ the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:allogy="http://schemas.android.com/apk/res/com.allogy.app"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">

	<!-- Action Bar -->
	<LinearLayout style="@style/UI.TitleBar">
		<ImageButton style="@style/UI.TitleBarAction" android:src="@drawable/ic_title_home"
			android:onClick="onHomeClick" />
		<ImageView style="@style/UI.TitleBarSeparator" />

		<TextView style="@style/UI.TitleBarText" android:text="@string/classroom_name" />

		<ProgressBar style="@style/UI.TitleBarProgressIndicator"
			android:id="@+id/action_bar_progress" android:visibility="gone" />
		<ImageView style="@style/UI.TitleBarSeparator" />
		<ImageButton style="@style/UI.TitleBarAction" android:src="@drawable/ic_title_search"
			android:onClick="onSearchClick" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent" android:layout_height="wrap_content">
		<com.allogy.app.ui.AutoButton android:id="@+id/classroom_button_publishers"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			allogy:percent_width="33" allogy:percent_height="10" android:text="@string/publisher"
			android:textColor="@drawable/tab_text_selector" android:background="@drawable/tab_background_selector" />

		<com.allogy.app.ui.AutoButton android:id="@+id/classroom_button_courses"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			allogy:percent_width="34" allogy:percent_height="10" android:text="@string/courses"
			android:textColor="@drawable/tab_text_selector" android:background="@drawable/tab_background_selector" />

		<com.allogy.app.ui.AutoButton android:id="@+id/classroom_button_lessons"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			allogy:percent_width="34" allogy:percent_height="10" android:text="@string/lessons"
			android:textColor="@drawable/tab_text_selector" android:background="@drawable/tab_background_selector" />
	</LinearLayout>

	<ListView android:id="@+id/classroom_listview"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:focusable="true" />
	
	<TextView android:id="@+id/classroom_loading"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:gravity="center_horizontal|center_vertical" android:text="Loading" />

</LinearLayout>
