<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 Allogy Interactive.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
  ~ use this file except in compliance with the License. You may obtain a copy of
  ~ the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations under
  ~ the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:id="@+id/lesson">

	<!-- Action Bar -->
	<LinearLayout style="@style/UI.TitleBar">
		<ImageButton style="@style/UI.TitleBarAction" android:src="@drawable/ic_title_home"
			android:onClick="onHomeClick" />
		<ImageView style="@style/UI.TitleBarSeparator" />

		<TextView style="@style/UI.TitleBarText" android:text="@string/classroom_name" />

		<ImageView style="@style/UI.TitleBarSeparator" />
		<ImageButton style="@style/UI.TitleBarAction" android:src="@drawable/ic_title_search"
			android:onClick="onSearchClick" />
	</LinearLayout>

	<ScrollView android:id="@+id/lesson_scrollview"
		android:layout_weight="1" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:fadingEdge="none">

		<LinearLayout android:id="@+id/lesson_linear_content"
			android:orientation="vertical" android:layout_height="fill_parent"
			android:layout_width="fill_parent" android:paddingTop="10dip"
			android:paddingBottom="10dip" android:paddingLeft="15dip"
			android:paddingRight="15dip">

			<!-- Media - consists of two images, one is for frame, other for button -->
			<RelativeLayout android:layout_width="match_parent"
				android:layout_height="150dp">

				<ImageView android:id="@+id/lesson_media_content"
					android:layout_width="match_parent" android:layout_height="match_parent"
					android:background="@drawable/lesson_no_media" android:padding="5dp"></ImageView>

				<LinearLayout android:layout_width="match_parent"
					android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal">
					<ImageView android:id="@+id/lesson_media_button"
						android:layout_height="wrap_content" android:layout_width="match_parent"
						android:padding="5dp" android:src="@drawable/play_button" />
				</LinearLayout>

			</RelativeLayout>

			<ImageView style="@style/Divider" />

			<!-- Objectives Button -->
			<TextView android:id="@+id/lesson_objectives_button"
				android:layout_width="match_parent" android:layout_height="45dp"
				android:paddingLeft="12dp" android:paddingRight="12dp"
				android:gravity="center_vertical|center_horizontal"
				android:background="@drawable/content_item_selector" android:text="@string/objectives"
				android:textSize="18sp" android:textColor="@color/content_item_dark"
				android:textStyle="bold" android:clickable="true" android:focusable="true"
				android:onClick="onObjectivesClick" />

			<ImageView style="@style/Divider" />

			<TextView android:id="@+id/lesson_question_button"
				android:layout_width="match_parent" android:layout_height="45dp"
				android:paddingLeft="12dp" android:paddingRight="12dp"
				android:gravity="center_vertical|center_horizontal"
				android:background="@drawable/content_item_selector" android:text="@string/ask_question"
				android:textSize="18sp" android:textColor="@color/content_item_dark"
				android:textStyle="bold" android:clickable="true" android:focusable="true"
				android:onClick="onAskQuestionClick" />

			<!-- Resources Header -->
			<TextView style="@style/Text.ContentHeader" android:text="@string/resources"
				android:visibility="gone" />

			<!-- Resource List -->
			<LinearLayout android:id="@+id/lesson_resource_list"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="vertical">

			</LinearLayout>

		</LinearLayout>
	</ScrollView>

	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:gravity="bottom|center_horizontal"
		android:background="@color/gray" android:paddingTop="5dip"
		android:paddingBottom="1dp" android:paddingLeft="4dp"
		android:paddingRight="4dp" android:orientation="horizontal">
		<Button android:id="@+id/lesson_quiz_button"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:text="@string/take_quiz" android:gravity="center" android:clickable="true"
			android:onClick="onTakeQuizClick" />
	</LinearLayout>


</LinearLayout>

